<?xml version="1.0" encoding="utf-8"?>
<!--
@author Mengying Liu
@Student No. 041086143
@date Mar 25, 2024
@labSecNo. 021
@purpose It manages the format for dictionary userInput main page
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText"
        android:layout_width="182dp"
        android:layout_height="67dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/translate_button"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/translate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="72dp"
        android:text="@string/translate_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toEndOf="@+id/editText" />

    <include
        android:id="@+id/include2"
        layout="@layout/bottom_navigation"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/definitionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#381478"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordTextView"
        app:layout_constraintVertical_bias="0.115"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#4D1F9F"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/API_name"
        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="84dp"
        android:text="@string/API_name"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/dictionary_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/translate_button" />

    <ImageView
        android:id="@+id/dictionary_icon"
        android:layout_width="76dp"
        android:layout_height="74dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dictionary_entry" />

</androidx.constraintlayout.widget.ConstraintLayout>