<?xml version="1.0" encoding="utf-8"?>
<!--
@author Mengying Liu
@Student No. 041086143
@date Mar 25, 2024
@labSecNo. 021
@purpose It manages main entrance toolbar menu structure
-->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_1"
        android:icon="@drawable/sunset"
        android:title="@string/button1"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_2"
        android:icon="@drawable/recipe"
        android:title="@string/button2"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_3"
        android:icon="@drawable/dictionary"
        android:title="@string/button3"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_4"
        android:icon="@drawable/songs"
        android:title="@string/button4"
        app:showAsAction="always" />
</menu>